--- a/cmd/vic-machine-server/Dockerfile
+++ b/cmd/vic-machine-server/Dockerfile
@@ -7,6 +7,10 @@
 
 FROM vmware/photon:1.0
 
+RUN tdnf -y --refresh distro-sync && \
+    tdnf info installed && \
+    tdnf clean all
+
 ENV HOST 0.0.0.0
 ENV PORT 80
 ENV TLS_PORT 443
